# MathPlayground

./: .gitignore  CMakeLists.txt
Source/: ClosestTwoFactors.cpp  ClosestTwoFactors.hpp  CpuTimer.hpp  Factorize.cpp  Factorize.hpp
UnitTest/: Main.cpp
